# bulk-files-renamer

./: README.md  main.py  pyproject.toml
