[tool.poetry]
name = "bulk-files-renamer"
version = "0.1.0"
description = "A project for bulk-renaming of files within a directory."
authors = ["nickmwangemi <nickmwangemi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
